# Protocol

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  xmake.lua
.github/workflows/: xmake-linux-llvm.yml  xmake-windows.yml
cmake/: ProtocolConfig.cmake.in
include/sculk/protocol/: MinecraftPacketIds.hpp  MinecraftPackets.hpp
include/sculk/protocol/actor/: ActorDataIDs.hpp  ActorEvent.hpp  ActorFlags.hpp  ActorLink.hpp  AgentActionType.hpp  AgentAnimationType.hpp  MetaData.hpp  PlayerActionType.hpp  PropertySyncData.hpp  SyncedAttribute.hpp
include/sculk/protocol/actor/attribute/: Attribute.hpp  AttributeData.hpp  AttributeLayerData.hpp  AttributeLayerSettings.hpp  AttributeLayerSyncData.hpp  BoolAttributeData.hpp  ColorAttributeData.hpp  EasingFunction.hpp  EnvironmentAttributeData.hpp  FloatAttributeData.hpp  RemoveEnvironmentAttributesData.hpp  UpdateAttributeLayerSettingsData.hpp  UpdateAttributeLayersData.hpp  UpdateEnvironmentAttributesData.hpp
include/sculk/protocol/actor/player/: ControlScheme.hpp  PackedItemUseLegacyInventoryTransaction.hpp  PlayerAuthInputData.hpp  PlayerBlockActions.hpp  PlayerListEntry.hpp  SerializedAbilitiesData.hpp  SerializedSkin.hpp  SyncedClientOptionsUpdate.hpp  SyncedPlayerMovementSettings.hpp  UUID.hpp
include/sculk/protocol/command/: CommandChainedSubcommandData.hpp  CommandConstrainedValueData.hpp  CommandData.hpp  CommandEnumData.hpp  CommandOriginData.hpp  CommandOriginType.hpp  CommandOverloadData.hpp  CommandParameterData.hpp  CommandPermissionLevel.hpp  CommandSoftEnumData.hpp  CurrentCmdVersion.hpp
include/sculk/protocol/inventory/container/: ContainerEnumName.hpp  ContainerID.hpp  ContainerType.hpp  (+2 more)
include/sculk/protocol/level/: AchievementIDs.hpp  ChunkPos.hpp  Experiments.hpp  GameRuleData.hpp  LegacyTelemetryEventType.hpp  LevelSettings.hpp  MolangVersion.hpp  SpawnSettings.hpp  StructureEditorData.hpp  StructureSettings.hpp  SubChunkBlockChangeInfo.hpp  SubChunkPos.hpp
include/sculk/protocol/math/: Vec2.hpp  Vec3.hpp
include/sculk/protocol/nbt/: CompoundTag.hpp  ListTag.hpp  TagType.hpp  TagVariant.hpp  ValueArrayTag.hpp  ValueTag.hpp
include/sculk/protocol/network/: AimAssistActorPriorityData.hpp  AuthenticationType.hpp  CameraAimAssist.hpp  CameraInstruction.hpp  CameraPreset.hpp  CameraSplineDefinition.hpp  CompressionAlgorithm.hpp  ConnectionRequest.hpp  DataStore.hpp  DebugShape.hpp  DisconnectFailReason.hpp  LocatorBar.hpp  ServerConfiguration.hpp  ServerTelemetryData.hpp  SyncWorldClocks.hpp  VoxelShapes.hpp
include/sculk/protocol/packet/: ActorEventPacket.hpp  ActorPickRequestPacket.hpp  AddActorPacket.hpp  AddBehaviorTreePacket.hpp  AddItemActorPacket.hpp  AddPaintingPacket.hpp  AddPlayerPacket.hpp  AddVolumeEntityPacket.hpp  AgentActionEventPacket.hpp  AgentAnimationPacket.hpp  AnimateEntityPacket.hpp  AnimatePacket.hpp  AnvilDamagePacket.hpp  AutomationClientConnectPacket.hpp  AvailableActorIdentifiersPacket.hpp  AvailableCommandsPacket.hpp  AwardAchievementPacket.hpp  BiomeDefinitionListPacket.hpp  BlockActorDataPacket.hpp  BlockEventPacket.hpp  BlockPickRequestPacket.hpp  BookEditPacket.hpp  BossEventPacket.hpp  CameraAimAssistActorPriorityPacket.hpp  CameraAimAssistPacket.hpp  CameraAimAssistPresetsPacket.hpp  CameraInstructionPacket.hpp  CameraPacket.hpp  CameraPresetsPacket.hpp  CameraShakePacket.hpp  CameraSplinePacket.hpp  ChangeDimensionPacket.hpp  ChangeMobPropertyPacket.hpp  ChunkRadiusUpdatedPacket.hpp  ClientCacheBlobStatusPacket.hpp  ClientCacheMissResponsePacket.hpp  ClientCacheStatusPacket.hpp  ClientCameraAimAssistPacket.hpp  ClientMovementPredictionSyncPacket.hpp  ClientToServerHandshakePacket.hpp  (+186 more)
include/sculk/protocol/utility/: BinaryStream.hpp  ReadOnlyBinaryStream.hpp  Result.hpp  SwapEndian.hpp  Variant.hpp
scripts/: format_all.py
src/sculk/protocol/: MinecraftPackets.cpp
src/sculk/protocol/actor/: ActorLink.cpp  MetaData.cpp  PropertySyncData.cpp  SyncedAttribute.cpp
src/sculk/protocol/command/: CommandChainedSubcommandData.cpp  CommandConstrainedValueData.cpp  CommandData.cpp  CommandEnumData.cpp  CommandOriginData.cpp  CommandOverloadData.cpp  CommandParameterData.cpp  CommandSoftEnumData.cpp
src/sculk/protocol/level/: ChunkPos.cpp  Experiments.cpp  GameRuleData.cpp  LevelSettings.cpp  SpawnSettings.cpp  StructureEditorData.cpp  StructureSettings.cpp  SubChunkBlockChangeInfo.cpp  SubChunkPos.cpp
src/sculk/protocol/math/: Vec2.cpp  Vec3.cpp
src/sculk/protocol/nbt/: CompoundTag.cpp  ListTag.cpp  TagVariant.cpp
src/sculk/protocol/network/: AimAssistActorPriorityData.cpp  CameraAimAssist.cpp  CameraInstruction.cpp  CameraPreset.cpp  CameraSplineDefinition.cpp  ConnectionRequest.cpp  DataStore.cpp  DebugShape.cpp  LocatorBar.cpp  ServerConfiguration.cpp  ServerTelemetryData.cpp  SyncWorldClocks.cpp  VoxelShapes.cpp
src/sculk/protocol/packet/: ActorEventPacket.cpp  ActorPickRequestPacket.cpp  AddActorPacket.cpp  AddBehaviorTreePacket.cpp  AddItemActorPacket.cpp  AddPaintingPacket.cpp  AddPlayerPacket.cpp  AddVolumeEntityPacket.cpp  AgentActionEventPacket.cpp  AgentAnimationPacket.cpp  AnimateEntityPacket.cpp  AnimatePacket.cpp  AnvilDamagePacket.cpp  AutomationClientConnectPacket.cpp  AvailableActorIdentifiersPacket.cpp  AvailableCommandsPacket.cpp  AwardAchievementPacket.cpp  BiomeDefinitionListPacket.cpp  BlockActorDataPacket.cpp  BlockEventPacket.cpp  BlockPickRequestPacket.cpp  BookEditPacket.cpp  BossEventPacket.cpp  CameraAimAssistActorPriorityPacket.cpp  CameraAimAssistPacket.cpp  CameraAimAssistPresetsPacket.cpp  CameraInstructionPacket.cpp  CameraPacket.cpp  CameraPresetsPacket.cpp  CameraShakePacket.cpp  CameraSplinePacket.cpp  ChangeDimensionPacket.cpp  ChangeMobPropertyPacket.cpp  ChunkRadiusUpdatedPacket.cpp  ClientCacheBlobStatusPacket.cpp  ClientCacheMissResponsePacket.cpp  ClientCacheStatusPacket.cpp  ClientCameraAimAssistPacket.cpp  ClientMovementPredictionSyncPacket.cpp  ClientToServerHandshakePacket.cpp  (+186 more)
src/sculk/protocol/utility/: EnumName.hpp  Reflection.hpp
src/sculk/protocol/utils/: EnumName.hpp  Reflection.hpp
(+107 files in other folders)
